--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
     "less": "^4.1.3",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.17",
+    "underscore": "^1.13.4",
     "vant": "^3.5.2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
