--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "unplugin-vue-components": "^0.21.2",
     "vite": "^3.0.1"
   }
